Solved issue with width, svg's
Replaced the white and orange svg components of the logo with one png.
Disabled horizontal scrolling due to difficulties with the vertical scrollbar's interference.

--- a/angular-website/src/app/components/home-page/home-page.component.scss
+++ b/angular-website/src/app/components/home-page/home-page.component.scss
@@ -14,6 +14,10 @@
   position: absolute;
   // Put behind everything.
   z-index: -2;
+
+  img {
+    object-fit: fill;
+  }
 }
 
 #foreground {
@@ -23,10 +27,10 @@
   z-index: -1;
 
   // This should be the height of the title image.
-  $title-height: 206px;
+  $title-height: 221px;
 
   #title-horizontal {
-    width: 100vw;
+    width: 100%;
     position: absolute;
     top: 12.5em;
     // turn into a flexbox container
@@ -43,9 +47,10 @@
         width: $title-height;
 
         img {
+          width: $title-height;
+          height: $title-height;
           position: absolute;
-          max-height: $title-height;
-          max-width: $title-height;
+          object-fit: contain;
         }
       }
 
