--- a/angular-website/src/styles.scss
+++ b/angular-website/src/styles.scss
@@ -7,6 +7,14 @@
 $light: #55A8DE;
 $primary: #FC903C;
 
+html {
+  // The width of the vertical scrollbar creates a small -yet insuferable- amount
+  // of horizontal wiggle room.
+  // The issue is described here: https://stackoverflow.com/questions/30489594/prevent-100vw-from-creating-horizontal-scroll/30504010
+  // My child, I'm going to go insane if the user is allowed to scroll horizontally.
+  overflow-x: hidden;
+}
+
 // The Bootstrap UI framework.
 // Even though ng-bootstrap and ngx-bootstrap are more efficient in an
 // Angular app, we will use Bootstrap because its universality
